--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1730,9 +1730,9 @@ html body .contact .formAndSvgs {
 
 html body .contact .formAndSvgs .contactForm {
   width: 50%;
-  //background-image: url("../images/contactFormCover.svg");
+  background-image: url("../images/contactFormCover.svg");
   padding: 1.5%;
-  background-attachment: fixed;
+  //background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 12px;
