--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -229,7 +229,7 @@ html{
             position: fixed;
             width : 60px;
             height: 60px;
-            z-index: 999;
+            z-index: 1001;
             background-color: tomato;
             border-radius: 50%;
             display: $f;
@@ -388,6 +388,13 @@ html{
                     // animation : messageAndCircleShower 1s;
                     // animation-delay: 2.3s;
                     // animation-fill-mode: forwards;
+
+                    @include d16{
+
+                        top : -75%;
+                        left : 19%;
+
+                    }
 
                     @include d17{
 
@@ -863,6 +870,13 @@ html{
                     // animation-delay: 1.9s;
                     // animation-fill-mode: forwards;
 
+                    @include d16{
+
+                        top : -13%;
+                        right: 25%;
+
+                    }
+
                     @include d17{
 
                         top : -40%;
@@ -886,6 +900,13 @@ html{
                     // animation-delay: 2.3s;
                     // animation-fill-mode: forwards;
 
+                    @include d16{
+
+                        top : -90%;
+                        right: 19%;
+
+                    }
+
                     @include d17{
 
                         top : -127%;
@@ -900,6 +921,12 @@ html{
                         text-align: $c;
                         line-height: 20px;
                         letter-spacing: 1.2px;
+
+                        @include d16{
+
+                            font-size: .9em;
+
+                        }
 
                         @include d17{
 
@@ -1270,7 +1297,7 @@ html{
 
                 @include d17{
 
-                    top : 20.5%;
+                    top : 22.5%;
 
                 }
 
@@ -1308,6 +1335,13 @@ html{
                     // animation-delay: 1.5s;
                     // animation-fill-mode: forwards;
 
+                    @include d16{
+
+                        left : 17%;
+                        top : -10%;
+
+                    }
+
                     @include d17{
 
                         left : 17%;
@@ -1330,6 +1364,13 @@ html{
                     // animation : messageAndCircleShower 1s;
                     // animation-delay: 1.9s;
                     // animation-fill-mode: forwards;
+
+                    @include d16{
+
+                        left : 15%;
+                        top : -32%;
+
+                    }
 
                     @include d17{
 
@@ -1354,6 +1395,13 @@ html{
                     // animation-delay: 2.3s;
                     // animation-fill-mode: forwards;
 
+                    @include d16{
+
+                        left : 5%;
+                        top : -110%;
+
+                    }
+
                     @include d17{
 
                         left : 5%;
@@ -1368,6 +1416,12 @@ html{
                         text-align: $c;
                         line-height: 20px;
                         letter-spacing: 1.2px;
+
+                        @include d16{
+
+                            font-size: .8em;
+
+                        }
 
                         @include d17{
 
@@ -1650,6 +1704,16 @@ html{
                 padding-top: 3%;
 
             }
+
+            h2{
+
+                @include d17{
+
+                    padding-bottom : 0%;
+
+                }
+
+            }
             
             .projectBoxes{
 
@@ -1664,7 +1728,13 @@ html{
 
                 @include d14{
 
-                    width : 85%;
+                    width : 95%;
+
+                }
+
+                @include d16{
+
+                    width : 100%;
 
                 }
 
@@ -1698,13 +1768,13 @@ html{
 
                     @include d15{
 
-                        transform: translateX(-40px);
+                        transform: translateX(-15px);
 
                     }
 
                     @include d17{
 
-                        transform: translateX(-33px);
+                        transform: translateX(-10px);
 
                     }
 
@@ -1717,6 +1787,12 @@ html{
                     width : 20%;
                     right : -19%;
                     top : 20%;
+
+                    @include d14{
+
+                        display: none;
+
+                    }
 
                 }
 
@@ -1755,13 +1831,13 @@ html{
 
                     @include d15{
 
-                        transform: translateX(40px);
+                        transform: translateX(15px);
 
                     }
 
                     @include d17{
 
-                        transform: translateX(33px);
+                        transform: translateX(10px);
 
                     }
 
@@ -1773,6 +1849,12 @@ html{
                     width : 20%;
                     left : -19%;
                     top : 20%;
+
+                    @include d14{
+
+                        display: none;
+
+                    }
 
                 }
 
@@ -1831,7 +1913,7 @@ html{
 
                     @include d15{
 
-                        width : 95%;
+                        width : 100%;
                         margin: 7% auto;
                         background-color: lighten(#141414, .6%);
 
@@ -1840,6 +1922,12 @@ html{
                     @include d16{
 
                         margin: 10% auto;
+
+                    }
+
+                    @include d16{
+
+                        margin: 15% auto;
 
                     }
                     
@@ -2126,6 +2214,12 @@ html{
                             @include d11{
 
                                 padding : 5% 10%; 
+
+                            }
+
+                            @include d16{
+
+                                font-size: 1em;
 
                             }
 
