--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2598,6 +2598,13 @@ footer{
 
                 }
 
+                @include d15{
+
+                    right: 60%;
+                    top : -12%;
+
+                }
+
             }
 
             .circleTwoFooter{
@@ -2624,6 +2631,12 @@ footer{
 
                 }
 
+                @include d15{
+
+                    right : 65%;
+
+                }
+
             }
 
             .messageBoxFooter{
@@ -2644,6 +2657,7 @@ footer{
 
                 @include d13{
 
+                    top : -70%;
                     right : -130%;
 
                 }
@@ -2654,11 +2668,34 @@ footer{
 
                 }
 
+                @include d15{
+
+                    left : -140%;
+                    top : -75%;
+                    padding : 15%;
+
+                }
+
+                @include d16{
+
+                    width : auto;
+
+                }
+
+                @include d17{
+
+                    width : 120%;
+                    left : -70%;
+                    top : -90%;
+
+                }
+
                 p{
 
                     color: #141414;
                     font-size: 1.2em;
                     transition: .6s;
+                    line-height: 20px;
 
                     @include d2{
 
@@ -2672,15 +2709,21 @@ footer{
 
                     }
 
-                    @include d13{
+                    @include d11{
 
                         font-size: 1.1em;
 
                     }
 
-                    @include d14{
+                    @include d13{
 
                         font-size: 1em;
+
+                    }
+
+                    @include d14{
+
+                        font-size: .9em;
 
                     }
 
@@ -2704,6 +2747,183 @@ footer{
         @include d13{
 
             margin-top: -6%;
+
+        }
+
+        .circleOneFirePlace{
+
+            position: absolute;
+            width : 7px;
+            height: 7px;
+            background-color: whitesmoke;
+            border-radius: 50%;
+            left : 8%;
+            top : 47%;
+
+            @include d13{
+
+                top : 39%;
+
+            }
+
+            @include d14{
+
+                top : 42%;
+
+            }
+
+            @include d15{
+
+                top : 20%;
+
+            }
+
+            @include d17{
+
+                top : 40%;
+                left : -10%;
+
+            }
+
+        }
+
+        .circleTwoFirePlace{
+
+            position: absolute;
+            width : 11px;
+            height: 11px;
+            background-color: whitesmoke;
+            border-radius: 50%;
+            left : 7%;
+            top : 41%;
+
+            @include d6{
+
+                top : 38%;
+
+            }
+
+            @include d11{
+
+                left : 4%;
+
+            }
+
+            @include d13{
+
+                top : 30%;
+
+            }
+
+            @include d15{
+
+                top : 5%;
+                left : 10%;
+
+            }
+
+            @include d16{
+
+                top : 0%;
+
+            }
+
+            @include d17{
+
+                top : 25%;
+                left : -15%;
+
+            }
+
+        }
+
+        .messageBoxFirePlace{
+
+            position: absolute;
+            background-color: whitesmoke;
+            border-radius: 9px;
+            padding : 2% 5%;
+            top : 22%;
+            left : -10%;
+
+            @include d4{
+
+                top : 19%;
+
+            }
+
+            @include d6{
+
+                top : 15%;
+
+            }
+
+            @include d11{
+
+                left: -23%;
+                top : 13%;
+
+            }
+
+            @include d13{
+
+                left: -35%;
+                top : 4%;
+
+            }
+
+            @include d14{
+
+                left: -45%;
+                top : 0%;
+
+            }
+
+            @include d15{
+
+                left: -5%;
+                top : -25%;
+                width : 100%;
+
+            }
+
+            @include d16{
+
+                padding : 3% 12%;
+                top : -62%;
+                width: 80%;
+
+            }
+
+            @include d17{
+
+                padding : 3% 4%;
+                top : -17%;
+                left : -60%;
+
+            }
+
+            p{
+
+                color : #141414;
+                font-size: 1.1em;
+               // font-weight: bold;
+                text-align: $c;
+                line-height: 17px;
+
+                @include d13{
+
+                    font-size: 1em;
+
+                }
+
+                @include d17{
+
+                    font-size: .8em;
+
+                }
+
+            }
 
         }
 
