--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2345,6 +2345,13 @@ footer .socials #instagramLink .circleOneFooter {
   }
 }
 
+@media (max-width: 576px) {
+  footer .socials #instagramLink .circleOneFooter {
+    right: 60%;
+    top: -12%;
+  }
+}
+
 footer .socials #instagramLink .circleTwoFooter {
   position: absolute;
   width: 11px;
@@ -2369,6 +2376,12 @@ footer .socials #instagramLink .circleTwoFooter {
   }
 }
 
+@media (max-width: 576px) {
+  footer .socials #instagramLink .circleTwoFooter {
+    right: 65%;
+  }
+}
+
 footer .socials #instagramLink .messageBoxFooter {
   position: absolute;
   background-color: whitesmoke;
@@ -2387,6 +2400,7 @@ footer .socials #instagramLink .messageBoxFooter {
 
 @media (max-width: 992px) {
   footer .socials #instagramLink .messageBoxFooter {
+    top: -70%;
     right: -130%;
   }
 }
@@ -2397,11 +2411,34 @@ footer .socials #instagramLink .messageBoxFooter {
   }
 }
 
+@media (max-width: 576px) {
+  footer .socials #instagramLink .messageBoxFooter {
+    left: -140%;
+    top: -75%;
+    padding: 15%;
+  }
+}
+
+@media (max-width: 480px) {
+  footer .socials #instagramLink .messageBoxFooter {
+    width: auto;
+  }
+}
+
+@media (max-width: 380px) {
+  footer .socials #instagramLink .messageBoxFooter {
+    width: 120%;
+    left: -70%;
+    top: -90%;
+  }
+}
+
 footer .socials #instagramLink .messageBoxFooter p {
   color: #141414;
   font-size: 1.2em;
   -webkit-transition: .6s;
   transition: .6s;
+  line-height: 20px;
 }
 
 @media (max-width: 2560px) {
@@ -2416,15 +2453,21 @@ footer .socials #instagramLink .messageBoxFooter p {
   }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1280px) {
   footer .socials #instagramLink .messageBoxFooter p {
     font-size: 1.1em;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   footer .socials #instagramLink .messageBoxFooter p {
     font-size: 1em;
+  }
+}
+
+@media (max-width: 768px) {
+  footer .socials #instagramLink .messageBoxFooter p {
+    font-size: .9em;
   }
 }
 
@@ -2446,6 +2489,174 @@ footer .firePlace {
 @media (max-width: 992px) {
   footer .firePlace {
     margin-top: -6%;
+  }
+}
+
+footer .firePlace .circleOneFirePlace {
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  background-color: whitesmoke;
+  border-radius: 50%;
+  left: 8%;
+  top: 47%;
+}
+
+@media (max-width: 992px) {
+  footer .firePlace .circleOneFirePlace {
+    top: 39%;
+  }
+}
+
+@media (max-width: 768px) {
+  footer .firePlace .circleOneFirePlace {
+    top: 42%;
+  }
+}
+
+@media (max-width: 576px) {
+  footer .firePlace .circleOneFirePlace {
+    top: 20%;
+  }
+}
+
+@media (max-width: 380px) {
+  footer .firePlace .circleOneFirePlace {
+    top: 40%;
+    left: -10%;
+  }
+}
+
+footer .firePlace .circleTwoFirePlace {
+  position: absolute;
+  width: 11px;
+  height: 11px;
+  background-color: whitesmoke;
+  border-radius: 50%;
+  left: 7%;
+  top: 41%;
+}
+
+@media (max-width: 1600px) {
+  footer .firePlace .circleTwoFirePlace {
+    top: 38%;
+  }
+}
+
+@media (max-width: 1280px) {
+  footer .firePlace .circleTwoFirePlace {
+    left: 4%;
+  }
+}
+
+@media (max-width: 992px) {
+  footer .firePlace .circleTwoFirePlace {
+    top: 30%;
+  }
+}
+
+@media (max-width: 576px) {
+  footer .firePlace .circleTwoFirePlace {
+    top: 5%;
+    left: 10%;
+  }
+}
+
+@media (max-width: 480px) {
+  footer .firePlace .circleTwoFirePlace {
+    top: 0%;
+  }
+}
+
+@media (max-width: 380px) {
+  footer .firePlace .circleTwoFirePlace {
+    top: 25%;
+    left: -15%;
+  }
+}
+
+footer .firePlace .messageBoxFirePlace {
+  position: absolute;
+  background-color: whitesmoke;
+  border-radius: 9px;
+  padding: 2% 5%;
+  top: 22%;
+  left: -10%;
+}
+
+@media (max-width: 1920px) {
+  footer .firePlace .messageBoxFirePlace {
+    top: 19%;
+  }
+}
+
+@media (max-width: 1600px) {
+  footer .firePlace .messageBoxFirePlace {
+    top: 15%;
+  }
+}
+
+@media (max-width: 1280px) {
+  footer .firePlace .messageBoxFirePlace {
+    left: -23%;
+    top: 13%;
+  }
+}
+
+@media (max-width: 992px) {
+  footer .firePlace .messageBoxFirePlace {
+    left: -35%;
+    top: 4%;
+  }
+}
+
+@media (max-width: 768px) {
+  footer .firePlace .messageBoxFirePlace {
+    left: -45%;
+    top: 0%;
+  }
+}
+
+@media (max-width: 576px) {
+  footer .firePlace .messageBoxFirePlace {
+    left: -5%;
+    top: -25%;
+    width: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  footer .firePlace .messageBoxFirePlace {
+    padding: 3% 12%;
+    top: -62%;
+    width: 80%;
+  }
+}
+
+@media (max-width: 380px) {
+  footer .firePlace .messageBoxFirePlace {
+    padding: 3% 4%;
+    top: -17%;
+    left: -60%;
+  }
+}
+
+footer .firePlace .messageBoxFirePlace p {
+  color: #141414;
+  font-size: 1.1em;
+  text-align: center;
+  line-height: 17px;
+}
+
+@media (max-width: 992px) {
+  footer .firePlace .messageBoxFirePlace p {
+    font-size: 1em;
+  }
+}
+
+@media (max-width: 380px) {
+  footer .firePlace .messageBoxFirePlace p {
+    font-size: .8em;
   }
 }
 
